--- a/ApexR3/ApexR3.vcxproj.filters
+++ b/ApexR3/ApexR3.vcxproj.filters
@@ -27,4 +27,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Asm.Asm">
+      <Filter>源文件</Filter>
+    </None>
+  </ItemGroup>
 </Project>
